# dvbcut-deb

./: .gitignore  CREDITS  ChangeLog  DISTFILES  Doxyfile  INSTALL  Makefile  Makefile.in  README  README.MingGW  SConstruct  configure.ac  configure.in  dvbcut.1  dvbcut.desktop.in  dvbcut.kdevelop  dvbcut.kdevelop.filelist  dvbcut.kdevelop.pcs  dvbcut.kdevses  dvbcut_0.7.0.orig.tar.gz.delta  dvbcut_0.7.0.orig.tar.gz.id  dvbcut_0.7.1.orig.tar.gz.delta  dvbcut_0.7.1.orig.tar.gz.id  dvbcut_0.7.2.orig.tar.gz.delta  dvbcut_0.7.2.orig.tar.gz.id  dvbcut_0.7.3.orig.tar.gz.delta  dvbcut_0.7.3.orig.tar.gz.id  dvbcut_0.7.4.orig.tar.gz.delta  dvbcut_0.7.4.orig.tar.gz.id  makefile.in  mingw.sh  setversion.sh
contrib/: AR_to_169  README.qt4  qt4.diff.bz2
contrib/arch/: PKGBUILD  readme.txt
debian/: changelog  control  copyright  docs  dvbcut.install  dvbcut.manpages  dvbcut.menu  install  menu  rules  watch
debian/patches/: 01_g++-4.3-fix.patch  715843_do-not-access-argv-beyond-last-item.patch  753369_mplayer2-uses-different-indices-for-audio-streams.patch  772346_use-qt4-modifiers-function.patch  772413_set-settings-params.patch  822609-do-fallback-to-Qt-internal-icons-if-themes-not-avail.patch  add-mousewheel-modifiers-to-help-page.patch  avoid-PATH_MAX-macro.patch  bug753347_initialize-pkt-variable-in-mpgfile__recodevideo-to-avoid-crash.patch  ffmpeg_2.9.patch  fix-ftbfs-gcc4.4.patch  fix-ftbfs-gcc4.5.patch  fix-ftbfs-gcc4.6.patch  fix-ftbfs-libav0.7.patch  fix-index-creation-on-arm.patch  fix_ffmpeg_includes.patch  fix_gcc_4.7.patch  libav10.patch  libav9.patch  port-to-qt4.patch  remove-ffmpeg-from-distfiles.patch  series  updateimagedisplayfix.patch
debian/source/: options
debian/upstream/: metadata
ffmpeg-patches/: cvs20050918.deletefiles
ffmpeg.src/: Makefile
ffmpeg.src/libavcodec/: Makefile  allcodecs.c
ffmpeg.src/libavformat/: Makefile  allformats.c  avformat.h
icons/: bookmark.svgz  icons.qrc
import/: stdlib.h
src/: Makefile.in  Makefile.w32  SConscript  avframe.cpp  avframe.h  buffer.cpp  buffer.h  busyindicator.h  defines.h  differenceimageprovider.cpp  differenceimageprovider.h  dvbcut.cpp  dvbcut.h  dvbcut.pro  dvbcut.ts  dvbcut_cs.html  dvbcut_cs.ts  dvbcut_de.html  dvbcut_de.ts  dvbcut_en.html  dvbcut_en.ts  dvbcutbase.ui  eventlistitem.cpp  eventlistitem.h  exception.cpp  exception.h  exportdialog.cpp  exportdialog.h  exportdialogbase.ui  gettext.cpp  gettext.h  imageprovider.cpp  imageprovider.h  index.cpp  index.h  lavfmuxer.cpp  lavfmuxer.h  logoutput.cpp  logoutput.h  main.cpp  (+29 more)
trunk/: ChangeLog  DISTFILES  INSTALL  Makefile  README  README.ffmpeg  README.icons  SConscript.ffmpeg  SConstruct  configure.in  dvbcut.kdevelop  dvbcut.kdevelop.pcs  dvbcut.xml  makefile.in  mingw.sh  setversion.sh
trunk/contrib/: AR_to_169  AR_to_43
trunk/debian/: README.Debian  changelog  control  copyright  docs  rules
trunk/ffmpeg-patches/: cvs20050918.diff
trunk/ffmpeg.src/libavcodec/: mpegvideo.c
trunk/ffmpeg.src/libavformat/: utils.c
trunk/icons/: chapter.svgz  play.svgz  stop.svgz
trunk/import/: byteswap.h  stdlib.cpp  stdlib.h
trunk/import/sys/: mman.h
trunk/src/: Makefile.in  Makefile.w32  SConscript  avframe.cpp  avframe.h  buffer.cpp  buffer.h  defines.h  differenceimageprovider.h  dvbcut.cpp  dvbcut.h  dvbcutbase.ui  eventlistitem.cpp  eventlistitem.h  exception.cpp  exception.h  exportdialog.h  exportdialogbase.ui  imageprovider.cpp  index.cpp  index.h  lavfmuxer.cpp  lavfmuxer.h  logoutput.cpp  logoutput.h  main.cpp  mpegmuxer.cpp  mpegmuxer.h  mpgfile.cpp  mpgfile.h  mplayererrorbase.ui  muxer.h  playaudio.cpp  port.h  progressstatusbar.cpp  progressstatusbar.h  progresswindow.cpp  progresswindowbase.ui  psfile.cpp  psfile.h  (+9 more)
